优化代码结构，新增配置属性

--- a/copy.ini
+++ b/copy.ini
@@ -1,7 +1,11 @@
-[section1]
-# 源路径
+[Basis]
+# 源路径（路径最后无需斜杠）
 src_dir = 
-# 目标路径
+# 目标路径（路径最后无需斜杠）
 dst_dir = 
 # 类型，1 为源路径下有格式为YYMMDD格式文件夹；2 为无需指向源路径下的子文件夹内
 type = 
+# 当文件夹为空时，程序的休息时间，需要大于执行时间，当小于时只会按执行时间进行，目前单位为秒，支持小数点
+rest_time = 
+# 程序执行时间，多久执行一次，目前单位为秒，支持小数点
+execution_time = 
